# BrainFuck-Compiler

./: CMakeLists.txt  README.md
include/: AssemblyGenerator.hpp  Compiler.hpp  Config.hpp  Interpreter.hpp  Tokenizer.hpp  Tokens.hpp
src/: AssemblyGenerator.cpp  Tokenizer.cpp  main.cpp
